--- a/remote_Job/template/header.html
+++ b/remote_Job/template/header.html
@@ -103,7 +103,7 @@
       Swal.fire({
         title: 'Logout Confirmation',
         text: 'Are you sure you want to log out?',
-        icon: 'question',
+        icon: 'warning',
         showCancelButton: true,
         confirmButtonColor: '#3085d6',
         cancelButtonColor: '#d33',
