--- a/remote_Job/template/jobapp/post-job.html
+++ b/remote_Job/template/jobapp/post-job.html
@@ -23,7 +23,7 @@
       <div class="container">
 
         <div class="row align-items-center mb-5">
-          <div class="col-lg-8 mb-4 mb-lg-0">
+          <div class="col-lg-8">
             <div class="d-flex align-items-center">
               <div>
                 <h2>Post A Job</h2>
@@ -40,8 +40,8 @@
           </div>
         </div>
         <form method="POST" enctype="multipart/form-data" class="p-4 rounded-lg" style="background-color: #ffffff; position: relative;">
-          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
-          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
+          <!-- <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
+          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div> -->
 
         <div class="row mb-5 p-4 p-md-5 border rounded" style="background-color: #ffffff; position: relative;">
           <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
@@ -135,9 +135,8 @@
               </div>
             </div>
           </div>
-            </form>
-
         </div>
+      </form>
       </div>
     </section>
 {% endblock %}
