--- a/remote_Job/template/account/employer-registration.html
+++ b/remote_Job/template/account/employer-registration.html
@@ -21,8 +21,7 @@
 <section class="site-section">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 mb-5">
-        <h2 class="mb-4 text-center">Sign Up To JobBoard</h2>
+      <div class="col-lg-10 mb-5 mx-auto ">
         {% include 'messages.html' %}
 
         {% if form.errors %}
@@ -43,11 +42,12 @@
         {% endif %}
         
         <form method="POST" action="" enctype="multipart/form-data" class="p-4 rounded-lg" id="login-form" style="background-color: #ffffff; position: relative;">
-          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
-          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
+          <!-- <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
+          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div> -->
           <div class="col-lg-12" style="background-color: #ffffff; position: relative;">
             <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
             <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
+            <h2 class="mb-4 text-center">Employer/Sign Up</h2>
             {% csrf_token %}
             {% for field in form %}
                 <div class="row form-group">
