--- a/remote_Job/template/account/login.html
+++ b/remote_Job/template/account/login.html
@@ -40,8 +40,8 @@
           {% endfor %}
         {% endif %}
         <form method="POST" action="#" class="p-4 rounded-lg " id="login-form" style="background-color: #ffffff; position: relative;">
-          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
-          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
+          <!-- <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div> -->
+          <!-- <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div> -->
           <div class="col-lg-12" style="background-color: #ffffff; position: relative;">
             <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
             <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
@@ -65,10 +65,7 @@
                           <i class="fa-solid fa-eye fa-lg" id="togglePassword" style="color: #4a4646;"></i> 
                           
                         </button> 
-                      </div>
-         
-                          
-                        
+                      </div>     
                       {% endif %}
                     </div>
                   {% endif %}
